[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privacy-guard"
version = "1.0.0"
description = "Detect, redact, and restore sensitive information (phone, email, ID, bank card, etc.)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mby159", url = "https://github.com/Mby159" }
]
keywords = ["privacy", "redact", "sensitive", "data-protection", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
privacy-guard = "privacy_guard:main"

[project.urls]
Homepage = "https://github.com/Mby159/privacy-guard"
Documentation = "https://github.com/Mby159/privacy-guard#readme"
Repository = "https://github.com/Mby159/privacy-guard"
Issues = "https://github.com/Mby159/privacy-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["privacy_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
